# aiops_course

./: README.md
Week 1/: W01_python_basics.py  a.txt  another.py
Week 2/: README.md
Week 2/Parse_log/: W02D07_parse_log.py  (+3 more)
Week 4/: README.md
Week 7-8/talk_to_logs/crewai_elasticMCP/: .env.example  README.md  Untitled-1.sh  config.py  elastic_MCP_demo.py  main.py  pyproject.toml  sample_output.txt  ui_agentic_backend.py  ui_main.py  ui_utils_backend.py
Week 7-8/talk_to_logs/crewai_elasticMCP/knn_elasticsearch/: reindex_with_embeddings.py  test_knn.py
Week 7-8/talk_to_prometheus/: .gitignore  config.py  config_crew.py  config_schema.py  crewai_flow.html  flow_define.py  html_page.py  main.py  main_notebook.ipynb  promql_flow.html  pyproject.toml  tools.py
Week 7-8/talk_to_prometheus/other_attempts/crew_ai_code/: README.md  crewai_flow.html  main_fullcode.py
Week 7-8/talk_to_prometheus/other_attempts/crewaidemo_simple/: agents.py  config.py  main.py  schemas.py  tasks.py  tools.py  utils.py
Week 7-8/talk_to_prometheus/other_attempts/data_analysis/: da_crewai.py  nb_scratchpad.py
Week 7-8/talk_to_prometheus/other_attempts/langgraph_code/: agents.py  config.py  main.py  schemas.py  tasks.py  tools.py
Week 7-8/talk_to_prometheus/other_attempts/no_llm_code/: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Week 7-8/talk_to_prometheus/other_attempts/no_llm_code/analysis-runner/: Dockerfile  job.py
Week 7-8/talk_to_prometheus/other_attempts/no_llm_code/src/: agents.py  config.py  main.py  schemas.py  tasks.py  tools.py  utils.py
(+111 files in other folders)
