[project]
name = "crewai-elasticmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai-tools[mcp]>=0.69.0",
    "crewai[tools]>=0.177.0",
    "elasticsearch>=8.0.0,<9.0.0",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
]
